--- a/best-air-fryers/ninja-air-fryers/index.html
+++ b/best-air-fryers/ninja-air-fryers/index.html
@@ -249,11 +249,20 @@
               <a class="btn btn-secondary" href="#top-picks">See top picks</a>
             </div>
 
+            <div class="note" style="margin-top: var(--s-5);">
+              <p class="small" style="margin:0;">
+                <strong>Quick comparisons:</strong>
+                <a href="/best-air-fryers/ninja-vs-philips/">Ninja vs Philips</a> ·
+                <a href="/best-air-fryers/ninja-vs-cosori/">Ninja vs Cosori</a>
+              </p>
+            </div>
+
             <p class="micro-note">
               Also useful:
               <a href="/best-air-fryers/">Best Air Fryers</a> ·
               <a href="/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/">Ninja review</a> ·
-              <a href="/guides/how-to-choose-an-air-fryer/">How to choose</a>
+              <a href="/guides/how-to-choose-an-air-fryer/">How to choose</a> ·
+              <a href="/best-air-fryers/best-air-fryer-for-families/">Best air fryer for families</a>
             </p>
 
             <p class="small">
@@ -329,7 +338,38 @@
         <div class="note" style="margin-top: var(--s-6);">
           <p class="small" style="margin:0;">
             Short on counter width but still want two baskets? Look at <a href="#doublestack">DoubleStack</a>.
+            Cooking for a family? Start with <a href="/best-air-fryers/best-air-fryer-for-families/">Best air fryer for families</a>.
           </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- ✅ COMPARISONS (reinforced internal linking) -->
+    <section class="section highlight" id="comparisons" aria-labelledby="comparisons-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="comparisons-title">Compare before you buy</h2>
+          <p class="section-subtitle">If you’re deciding between brands, start here.</p>
+        </div>
+
+        <div class="cards" role="list">
+          <article class="card top-pick" role="listitem">
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-vs-philips/">Ninja vs Philips</a></h3>
+            <p class="card-text">Workflow differences, controls, consistency, and who each brand fits best.</p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-vs-philips/">Compare</a></p>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-vs-cosori/">Ninja vs Cosori</a></h3>
+            <p class="card-text">Trade-offs: ease of use, cleanup friction, results consistency, and noise.</p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-vs-cosori/">Compare</a></p>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/best-air-fryers/best-air-fryer-for-families/">Best air fryer for families</a></h3>
+            <p class="card-text">Capacity reality, portion sizing, and which layouts work best for family meals.</p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/best-air-fryer-for-families/">Open</a></p>
+          </article>
         </div>
       </div>
     </section>
@@ -410,7 +450,6 @@
           </p>
         </div>
 
-        <!-- ✅ CA line (subtle, compliant) -->
         <p class="small muted" style="margin-top: calc(var(--s-2) * -1); margin-bottom: var(--s-6);">
           Availability and pricing are based on Amazon.ca listings.
         </p>
@@ -526,67 +565,6 @@
       </div>
     </section>
 
-    <!-- COMPARISON TABLE -->
-    <section class="section highlight" aria-labelledby="table-title">
-      <div class="container">
-        <div class="section-head">
-          <h2 id="table-title">Quick comparison</h2>
-          <p class="section-subtitle">Pick a workflow first, then capacity.</p>
-        </div>
-
-        <div class="table-wrap">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Model</th>
-                <th scope="col">Type</th>
-                <th scope="col">Best for</th>
-                <th scope="col">Buy</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td><a href="#dz550">DualZone Smart XL 10 QT (DZ550)</a></td>
-                <td>Two baskets</td>
-                <td>Families, timing meals</td>
-                <td><a href="https://www.amazon.ca/Ninja-DZ550-Independent-Thermometer-Dehydrate/dp/B0B15Q3HCQ?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=9cde9721d96fc88ce43d609363fd090e&ref_=as_li_ss_tl" rel="nofollow sponsored noopener" target="_blank">Amazon.ca</a></td>
-              </tr>
-              <tr>
-                <td><a href="#af161">Max XL 5.5 QT (AF161)</a></td>
-                <td>Single basket</td>
-                <td>Everyday value, 1–3 people</td>
-                <td><a href="https://www.amazon.ca/Ninja-AF161-Fryer-Quart-Grey/dp/B07S6529ZZ?&linkCode=ll2&tag=kitchengearla-20&linkId=14f0831afd6796a4f71c21eecb6d01de&ref_=as_li_ss_tl" rel="nofollow sponsored noopener" target="_blank">Amazon.ca</a></td>
-              </tr>
-              <tr>
-                <td><a href="#dz401">DualZone XL (DZ401)</a></td>
-                <td>Two baskets</td>
-                <td>Premium DualZone choice</td>
-                <td><a href="https://www.amazon.ca/Ninja-DZ401-Independent-Dehydrate-Family-Sized/dp/B096X9LGJ1?&linkCode=ll2&tag=kitchengearla-20&linkId=f36fffcd55f391407f136e8b9e0e82c7&ref_=as_li_ss_tl" rel="nofollow sponsored noopener" target="_blank">Amazon.ca</a></td>
-              </tr>
-              <tr>
-                <td><a href="#af150">AF150AMZ (compact)</a></td>
-                <td>Single basket</td>
-                <td>Small kitchens, smaller portions</td>
-                <td><a href="https://www.amazon.ca/Ninja-AF150AMZ-Reheats-Dehydrates-Capacity/dp/B08QKTXT1N?&linkCode=ll2&tag=kitchengearla-20&linkId=7c3983eca5c231d70df105045768cd4b&ref_=as_li_ss_tl" rel="nofollow sponsored noopener" target="_blank">Amazon.ca</a></td>
-              </tr>
-              <tr>
-                <td><a href="#doublestack">DoubleStack XL</a></td>
-                <td>Two baskets (vertical)</td>
-                <td>Space-saving two-zone</td>
-                <td><a href="https://www.amazon.ca/Ninja-DoubleStack-2-Basket-Thermometer-Technology/dp/B0F8RGZLQ3?th=1&linkCode=ll2&tag=kitchengearla-20&linkId=ca0663dcf51622984d0154de9ee61ae5&ref_=as_li_ss_tl" rel="nofollow sponsored noopener" target="_blank">Amazon.ca</a></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-
-        <div class="note attention" style="margin-top: var(--s-6);">
-          <p class="small" style="margin:0;">
-            Capacity numbers are not the whole story. Crispness depends on airflow and keeping food in a single layer.
-          </p>
-        </div>
-      </div>
-    </section>
-
     <!-- HOW TO CHOOSE -->
     <section class="section" id="how-to-choose" aria-labelledby="choose-title">
       <div class="container">
@@ -609,6 +587,7 @@
               <ul class="link-list">
                 <li><a href="/best-air-fryers/ninja-vs-philips/">Ninja vs Philips</a></li>
                 <li><a href="/best-air-fryers/ninja-vs-cosori/">Ninja vs Cosori</a></li>
+                <li><a href="/best-air-fryers/best-air-fryer-for-families/">Best air fryer for families</a></li>
               </ul>
             </div>
 
