--- a/best-air-fryers/best-air-fryer-for-families/index.html
+++ b/best-air-fryers/best-air-fryer-for-families/index.html
@@ -29,23 +29,23 @@
   <meta property="og:url" content="https://kitchengearlab.github.io/best-air-fryers/best-air-fryer-for-families/" />
   <meta property="og:title" content="Best Air Fryer for Families (2026) | KitchenGearLab" />
   <meta property="og:description" content="Usable capacity, one vs two baskets, cleanup friction, and safe family-sized picks with clear trade-offs." />
-  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp" />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/best-air-fryer-for-families-og-1200x630.webp" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:type" content="image/webp" />
-  <meta property="og:image:alt" content="Minimalist editorial trust image with calm, clean shapes and soft daylight." />
+  <meta property="og:image:alt" content="Calm editorial family kitchen scene with a generic matte black air fryer as the focal point." />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Best Air Fryer for Families (2026) | KitchenGearLab" />
   <meta name="twitter:description" content="Usable capacity, one vs two baskets, cleanup friction, and safe family-sized picks with clear trade-offs." />
-  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp" />
-  <meta name="twitter:image:alt" content="Minimalist editorial trust image with calm, clean shapes and soft daylight." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/best-air-fryer-for-families-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Calm editorial family kitchen scene with a generic matte black air fryer as the focal point." />
 
-  <!-- Performance: Hero preload (reuses your existing best-air-fryers hero) -->
+  <!-- Performance: Hero preload (Families hero) -->
   <link rel="preload" as="image"
-        href="https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-1600x840.webp"
-        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-2400x1260.webp 2400w"
+        href="https://kitchengearlab.github.io/assets/images/hero/best-air-fryer-for-families-hero-1600x840.webp"
+        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/best-air-fryer-for-families-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/best-air-fryer-for-families-hero-2400x1260.webp 2400w"
         imagesizes="(max-width: 900px) 100vw, 50vw" />
 
   <!-- Brand preload -->
@@ -111,7 +111,7 @@
         "breadcrumb": { "@id": "https://kitchengearlab.github.io/best-air-fryers/best-air-fryer-for-families/#breadcrumbs" },
         "primaryImageOfPage": {
           "@type": "ImageObject",
-          "url": "https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp",
+          "url": "https://kitchengearlab.github.io/assets/images/og/best-air-fryer-for-families-og-1200x630.webp",
           "width": 1200,
           "height": 630
         },
@@ -130,7 +130,7 @@
         "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
         "image": {
           "@type": "ImageObject",
-          "url": "https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp",
+          "url": "https://kitchengearlab.github.io/assets/images/og/best-air-fryer-for-families-og-1200x630.webp",
           "width": 1200,
           "height": 630
         },
@@ -268,15 +268,15 @@
             <picture>
               <source
                 type="image/webp"
-                srcset="https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-1600x840.webp 1600w,
-                        https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-2400x1260.webp 2400w"
+                srcset="https://kitchengearlab.github.io/assets/images/hero/best-air-fryer-for-families-hero-1600x840.webp 1600w,
+                        https://kitchengearlab.github.io/assets/images/hero/best-air-fryer-for-families-hero-2400x1260.webp 2400w"
                 sizes="(max-width: 900px) 100vw, 50vw"
               />
               <img
-                src="https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-1600x840.webp"
+                src="https://kitchengearlab.github.io/assets/images/hero/best-air-fryer-for-families-hero-1600x840.webp"
                 width="1600"
                 height="840"
-                alt="Clean editorial kitchen counter with modern appliances in soft natural daylight."
+                alt="Calm family kitchen counter with a generic matte black air fryer as the focal point, soft natural daylight."
                 loading="eager"
                 decoding="async"
                 fetchpriority="high"
